Fixed waveform z-index error

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -14,6 +14,7 @@
 nav {
   position: sticky;
   top:0;
+  z-index: 100;
 
   display: flex;
   justify-content: center;
